# serializer version: 1
# name: test_setcover_gemm_emits_golden[agntab_coverage_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x10WKAGg4ssBHslGcaQ7r7u5GF4Se6jGNBrTIm0sRwCYk=',
      'err': 0,
      'opcode_set_sha256': '6798cfc0dfce1c4c59ca2d81d4223457e93b1e32b4fdb85d5afd1fe324412a71',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x17DstmwfC7OiOFTVvXrstvKyvO7lYjJREllGiZYxIRDc=',
      'err': 0,
      'opcode_set_sha256': 'eeea208709beb5fcde16de7f1e313dbf391f21cb7ccc4a4cc45576292c37d6fd',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x19pU8BjW-z2EcDY0HlWMK0NVvr83X9I7hIUrqaOo8GKY=',
      'err': 0,
      'opcode_set_sha256': 'eeea208709beb5fcde16de7f1e313dbf391f21cb7ccc4a4cc45576292c37d6fd',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1H6ChJ6qR3ERVx8jesYSONiC40TMo6IQUJlOSRvdnRj4=',
      'err': 0,
      'opcode_set_sha256': '6798cfc0dfce1c4c59ca2d81d4223457e93b1e32b4fdb85d5afd1fe324412a71',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1TZrFMkhH4m-YBBxQpcsTxUC8nqtKzZFesUmZWAmN7EM=',
      'err': 0,
      'opcode_set_sha256': 'eeea208709beb5fcde16de7f1e313dbf391f21cb7ccc4a4cc45576292c37d6fd',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1V4nvi2-ga6tO0LPcCnO9p1BHYlf_ZDqutlPPYqXFTtI=',
      'err': 0,
      'opcode_set_sha256': '091b9e121f92b0a6fb0a4998a1f0f3a3097f7c31d7bcf3a9d8adf4b73fa300da',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1aTC_uwP_lTUL5eFyO2XwJ8PSWxh8H8G3EaiXKhYVzU4=',
      'err': 0,
      'opcode_set_sha256': 'eeea208709beb5fcde16de7f1e313dbf391f21cb7ccc4a4cc45576292c37d6fd',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1yd1GZYL-N0QySg4mTyW3bDnctCxhKOmHLRkZVLPrj_I=',
      'err': 0,
      'opcode_set_sha256': 'eeea208709beb5fcde16de7f1e313dbf391f21cb7ccc4a4cc45576292c37d6fd',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[agntab_coverage_gfx950]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT128x160x64_MI322IM9ysG-9c0ZsEAuVFw2thY2mgCoio-dg67Zo2CPqCc=',
      'err': 0,
      'opcode_set_sha256': '1c00954827f6e7993f4bd1db61bb6a193b9d2fee18111fdf26e46b4db8afbd48',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT128x160x64_MI32NYQnOMKhnyiubBVfv5l6lwTYMiP-SvHpwaqMjOR5ZTI=',
      'err': 0,
      'opcode_set_sha256': 'aa28b3fbcb9cf09f87e6e362d9e629bc3b9f27be6962d400bf3f7546f20f1b1f',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT128x160x64_MI32iW5fvq1j-kQINxVr7SmF3DUwteBa2EmTo3DWdxat3pU=',
      'err': 0,
      'opcode_set_sha256': 'aa28b3fbcb9cf09f87e6e362d9e629bc3b9f27be6962d400bf3f7546f20f1b1f',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT128x160x64_MI32wMpTe7GFW1ZKjkYtg6aIYiMXhS8tLN9zuMb3rIkCk_Y=',
      'err': 0,
      'opcode_set_sha256': '1c00954827f6e7993f4bd1db61bb6a193b9d2fee18111fdf26e46b4db8afbd48',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT192x128x64_MI16HHxI9KMid6zW10kBu_0uVKY2SNPq-22bSRuGfz57mqc=',
      'err': 0,
      'opcode_set_sha256': 'd98f9aaf0843d67f358e7d71c659995a0fd1ad3f3ff031a33c0275d980a202b7',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT192x128x64_MI16NBHw2nw5QD4lXJpcS2MfHF2gdImW5yc2z5cOe1ZGBKY=',
      'err': 0,
      'opcode_set_sha256': 'd98f9aaf0843d67f358e7d71c659995a0fd1ad3f3ff031a33c0275d980a202b7',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT192x128x64_MI16W_7yr9e4mZTXhGgFqFx62q8ocgOizp1CZ-oOVvLQFyE=',
      'err': 0,
      'opcode_set_sha256': 'c16a66e72e8ee041d9687f749d2d8031e298de4ff7a76499d18ecac53fcd2660',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT192x128x64_MI16s-jNTebGK6350qxAGaVQnzSoqynxe48Kyfbp9ghGmlg=',
      'err': 0,
      'opcode_set_sha256': 'c16a66e72e8ee041d9687f749d2d8031e298de4ff7a76499d18ecac53fcd2660',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[b6f4ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT16x16x128_MInLwYYry4nvPQpZKwvpFR4jU_EjxaOoUsGQObxxOvolo=',
      'err': 0,
      'opcode_set_sha256': '16799a78cf0894ef3c01e00120a3f79d676e26836a16770957c0653ba2161c2a',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT16x16x128_MIyhbn9Ap3FRxthtj3348u2e-3tj_hRfiAZhGnzFSM39s=',
      'err': 0,
      'opcode_set_sha256': '0f17d21739438da9dbdb1e15419551d77c418d31041e0c8528f557877e509180',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT16x16x256_MIOzht2AcX_4CVcYZ6KkUn_j-DwDnLYKuqWxhvF7FZqwE=',
      'err': 0,
      'opcode_set_sha256': '0f17d21739438da9dbdb1e15419551d77c418d31041e0c8528f557877e509180',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT16x16x256_MIa6_wpR_B47S8Kg5Bvsb-oHgltlQeUWqQiNGy-_GfSv0=',
      'err': 0,
      'opcode_set_sha256': '16799a78cf0894ef3c01e00120a3f79d676e26836a16770957c0653ba2161c2a',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT64x64x128_MIMudznZ3MS_973ypt20UsnloH6aqGOVmDI7LZ8LFDMug=',
      'err': 0,
      'opcode_set_sha256': 'aa570a4cb7d3d5ca7653f6bb329947f8372a8c3570cf1227ee8a6edb0ec48306',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT64x64x128_MIsypdQUG96dpPbJFmw0qzB4WTTxKbFrqQpIe0E05Jzsc=',
      'err': 0,
      'opcode_set_sha256': '5ce420f4620ead65e2c13475dd4346164cf071422b0effdff6af015a2f77268c',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT64x64x256_MI1M0QcYvuPbgtf9dtqotnElrsf_IOnIEpUq1vSvtmiVc=',
      'err': 0,
      'opcode_set_sha256': '4e9e062262ec9587cd29dc4de593f0c1307264bc867d5584eea83dd179679776',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT64x64x256_MIThZFBAotJEi9_OJAbGpx7-FCoSPjadZvoQ7m-3oqx64=',
      'err': 0,
      'opcode_set_sha256': 'aa570a4cb7d3d5ca7653f6bb329947f8372a8c3570cf1227ee8a6edb0ec48306',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[b8b8s_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_B8B8S_BH_UserArgs_MT256x32x64_MI1HMo-fM9mhRicZXd8LANejSaUlNFmvjh7gp97esPO0Tg=',
      'err': 0,
      'opcode_set_sha256': '8ac2d2490a2fdb9edba5cd81a9d4ccc80ed48984e787548521e82487457a9099',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[bbs_bgradd_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_D_GradB_HA_S_UserArgs5f2Yw4Yr2kmNPwAjpn38pCAjUZClveOdM5HE9CQRJ6w=',
      'err': 0,
      'opcode_set_sha256': 'b4a69c4dd65790207b31e489dae25ca75613c9302e8620d869bb123ad73925ef',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_D_GradB_HA_S_UserArgsOG-oCrvKMT-tfhSe7qeZ8oB9et4-ivzo1MNc696SDG4=',
      'err': 0,
      'opcode_set_sha256': 'f159f7299ba1c767fb1e7ebc170e9c7d7c7457055606b5c85ce81de98df10ab8',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[bf16_CLS_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1KwdRSDr3up7a7zp5E-5AZ9qDY3jWtpQaMvYAonFEIIg=',
      'err': 0,
      'opcode_set_sha256': '14d7151d8ccccf80e56a4ecf9708bdb264cc42a430f12b7f44f81b57a340d626',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1j043fZMz7KE-fnLiO-NXYaIYVYFXLJjuxhGbT7DdIXo=',
      'err': 0,
      'opcode_set_sha256': '822999475572aaeb77b98d86092eb72bee6ba9c263c06ba2e8ab0b11e59cf1b4',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT27fKqC3ULRuGixWFoO5lJcH4-keGeKqp3YisN8rupD2k=',
      'err': 0,
      'opcode_set_sha256': 'aeb06334942a7893571698ebbae72e4ef855e09bf034826cab6a6066dd2733d6',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT3_PQ3YZy4d1VLQ2EgfEcjnRW4cXHt-Z9lMG_DWPyOxj8=',
      'err': 0,
      'opcode_set_sha256': '30114aa3687c2aafb1c03c017534f283d3f7bc8a1aded1b8d33aeb1c5aa74a85',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT3caNCYxUldgvSnynBad-pEP1Ab3sp5ik1qSFSRjiyfPo=',
      'err': 0,
      'opcode_set_sha256': '822999475572aaeb77b98d86092eb72bee6ba9c263c06ba2e8ab0b11e59cf1b4',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT3l5cQ6nmGKHBYSPpJjKfN1MPVIJDDnmtkUkAhkw66cok=',
      'err': 0,
      'opcode_set_sha256': '30114aa3687c2aafb1c03c017534f283d3f7bc8a1aded1b8d33aeb1c5aa74a85',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT3x9mD-IyXlOrCDws-ZHu_xtnVu6CbZ_Y9_7ax4wqrgso=',
      'err': 0,
      'opcode_set_sha256': 'c6c944f395ec8b1a2014dade3897ad997d12e71c4b47aca52b4f56db9a5a895a',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT4wF7PO_d8n2ndPZNGb11CDTD7GGVrHBKk2xgjGZlqNI4=',
      'err': 0,
      'opcode_set_sha256': '3968acea8f5082c1d9ebbf5467631fe9295e8249bd8da0a6e7d6f904d08c43f0',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[bf6_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_B6SS_BH_UserArgs_MT16x16x128_MI16UJlnXc7cY08erAfk2WODmjyCBUSEtUdTi2GsToaROwo=',
      'err': 0,
      'opcode_set_sha256': '0fe1fdf3776126b722ba00eda1c493fc1b6328a36a6dcbe883bccd2424dd8813',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6SS_BH_UserArgs_MT16x16x128_MI16VVxISkkXdUD7l7P8VQfkxricza8wrBGQiX5UhKOzjxk=',
      'err': 0,
      'opcode_set_sha256': '844a51b171d1a2cac27b5a9c41393183c779ad62d95e406da146a1f185ac4e99',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[cgemm_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT16x16x16_MI16x16x1TPIvi-0xPAFRy9KNiGrDGcAGQL9lt-fHbmtVVL1QdLM=',
      'err': 0,
      'opcode_set_sha256': 'db6206e89d89ad54a4f8b073038e4df57e0fdde6756dae0c23126d3a69827552',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT16x16x16_MI16x16x1x-CRM9QlVBd3lT3wsz0w1ytVkGEx9pMtmn4HeHMHdso=',
      'err': 0,
      'opcode_set_sha256': 'c4357f7978d68740952da9ca4c2b97fa9cc82b223ac5377661ccfceffe6e38be',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT16x16x8_MI16x16x1_dusJDyo4zhUhK76xHswrfeNCM93Z1NWVTikaa4PGiGI=',
      'err': 0,
      'opcode_set_sha256': 'c4357f7978d68740952da9ca4c2b97fa9cc82b223ac5377661ccfceffe6e38be',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT16x16x8_MI16x16x1_i5_KyrfuMKsu2RV34MEMWbZGf2ysTR3n6ORVedo_EaE=',
      'err': 0,
      'opcode_set_sha256': 'db6206e89d89ad54a4f8b073038e4df57e0fdde6756dae0c23126d3a69827552',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT32x32x8_MI16x16x1_TUgOTKvdG2ofFXmp7ysFLh-5ArqOIZHeJWCbiugyWNM=',
      'err': 0,
      'opcode_set_sha256': '87e7b764d3e8f2bad0500a4a53ba3d235e0be6268292c3dcd6998fe4a0ebd90e',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT32x32x8_MI16x16x1_i5IkEAJpB-Q7zHgvO5iNFjhvg8dPJdAv1ckDR4u1S24=',
      'err': 0,
      'opcode_set_sha256': '5dff9d8fd0c738cbdd46db3faa273ddd0d4eacb20b7066c6fee45853e431d105',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT64x64x8_MI16x16x1_TsHcJZB-x0svUk4-_j0hCEc8j-wdW8VdjV22sKoQ61w=',
      'err': 0,
      'opcode_set_sha256': '5dff9d8fd0c738cbdd46db3faa273ddd0d4eacb20b7066c6fee45853e431d105',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT64x64x8_MI16x16x1__JTbEVWnvNlkueQoS_1jvdEWGD3p3C48s3L1bqRR0Bg=',
      'err': 0,
      'opcode_set_sha256': '0469a95a6296aa338449aef0fec9d47d7ded43de32588cd77911634a6786f19d',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[custom_mainloop_scheduling]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT247npc-umIcHgYRN8UOkVhrRxniaBwzx5jMwm5_vjh5U=',
      'err': 0,
      'opcode_set_sha256': '985a9d607a68676c672eac7919798e3f5ff8d0b833d65c238a8d2a66f9714177',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT2z4ePzXzqG74afDkGy6lk1VRcPL9m9RomhEOnWwmRhlE=',
      'err': 0,
      'opcode_set_sha256': 'f51745a24f6f48c0bf2177db250842b721a9e7dcf364b6a88a5e7234ae468340',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[custom_mainloop_scheduling_tf32]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_S_MX_B_UserArgs_MT192x256x32_MI16_Bh74qb4J0MG12Px-sBuVetRh_AtxqeUUlYMa7W3R7I=',
      'err': 0,
      'opcode_set_sha256': '15bd2d99cc1340d2574cd39e3af138ff91c316cc9adc38f5fceffcff78c187c6',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[dot2_gfx942]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HHS_BH_Bias_SAV_UserArgs_MT64x1x6p485rTlU_WXDdsi53yvRP2p5yoRf2NTIJ7hBTwxsTRE=',
      'err': 0,
      'opcode_set_sha256': '98f44adffe3482d2b2557cb5a64ed4b0447abbe0c02839fd685395a153f5919c',
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HHS_BH_Bias_SAV_UserArgs_MT64x1x6uycHHx_O7za_WSWvU5bb6XMmmoEGWJ62HYATapep8ZI=',
      'err': 0,
      'opcode_set_sha256': '1927f601ec1a1f3a78504258c848d44fda77175f5f61abb81f6c068beaafc616',
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HHS_BH_Bias_SAV_UserArgs_MT64x1x6xRcUCO_XI_9KklbuHFmObQds-3eFVW2lPXRvpAZrlvo=',
      'err': 0,
      'opcode_set_sha256': 'b54d165565e2f8e82fe8d00338486d2f0be4a60bb334db9455cff0032e075822',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f16f8mix_ss_stoch]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8_F8SS_BH_HA_S_SAB_UserArgs_MT6qdj583-BLdYczSP634sQDJ478JIrpisnEKCtXmGIEHk=',
      'err': 0,
      'opcode_set_sha256': 'f0300db2b2876ab04ca3da5ebcb8823bd0a17d6b34c08af95048fe283dea192b',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8_F8SS_BH_HA_S_SAB_UserArgs_MT6qvmy_M9l7AnsSXNOnKkySh_XussWgs_yfPGpjWiZ4uM=',
      'err': -2,
      'opcode_set_sha256': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8_F8SS_BH_HA_S_SAB_UserArgs_MT6t1JS17Fq6JsCCw7HH_ceIgHrRgxuUoHeL8V0BKjv3P4=',
      'err': 0,
      'opcode_set_sha256': '0542c59889e06a73881658dd90ac5c6d16e26a72308284c373f7ad67d5d9be12',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8_F8SS_BH_HA_S_SAB_UserArgs_MT6yEBLO1PJX-U8o7h7HK5BmAieseICNwDlV2Xbu7mdvHQ=',
      'err': -2,
      'opcode_set_sha256': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f4b8ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT16x16x128_MI16IbGLxPVQlmZ5JaYaQnyuqmBZus6P8VExyMircyU1ldU=',
      'err': 0,
      'opcode_set_sha256': '24ee202f77032c8e3135b919a5007efd5325fdaed627062aa6f1671a4e706bf3',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT16x16x128_MI16NmRa4fuPlExth_ifjIdlQ_UPIiGVSkSP6EJ2N4X9Qvg=',
      'err': 0,
      'opcode_set_sha256': '1fcc6a8f92d3f0599b7372e498f97f556b3dcd9af3f1267609ff6882d809622b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT16x16x256_MI16l_ZFNyM780FNiYCgCgMdAre7rEbtrSX9uzLyafq4cFc=',
      'err': 0,
      'opcode_set_sha256': '1fcc6a8f92d3f0599b7372e498f97f556b3dcd9af3f1267609ff6882d809622b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT16x16x256_MI16yl4ZgaBhE6N_ge7YMM10rDuQwdMMcItpE45THxQglUc=',
      'err': 0,
      'opcode_set_sha256': '24ee202f77032c8e3135b919a5007efd5325fdaed627062aa6f1671a4e706bf3',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT64x64x128_MI167icpiNGA7uDvEkPC4d-G2fiyLYJcPBX2aoSmdmQeNaA=',
      'err': 0,
      'opcode_set_sha256': '1bfe793d26be7c8cc0d22a242dfc64e55decafa20b32306372700501e99e0713',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT64x64x128_MI16bXRpAD_YOMaRY_dVoUhQ3RE5lKywyevg92V2rn_JXRk=',
      'err': 0,
      'opcode_set_sha256': '3b43ce2d54b91be9022e4d5b1b88bab54e455116cf75ed16c80503a6da8e1a7a',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT64x64x256_MI16VARUQ92y6lNGdlYwrFKHCEnSXdvy-qVRIyZjekbYNEI=',
      'err': 0,
      'opcode_set_sha256': '1bfe793d26be7c8cc0d22a242dfc64e55decafa20b32306372700501e99e0713',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT64x64x256_MI16etpUz7VyfuP1fnnYZWaP4zpNMUqypAS_n2ADcZI-prg=',
      'err': 0,
      'opcode_set_sha256': '3b43ce2d54b91be9022e4d5b1b88bab54e455116cf75ed16c80503a6da8e1a7a',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f4f6ss_tdm_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4F6BS_BH_UserArgs_MT16x16x128_MIT6zLLAmxVOIcB_pcFqCU0QYeRf6HFb_y7_s4yvDcLZY=',
      'err': 0,
      'opcode_set_sha256': 'd2b2994e3fadb528fc60201d56a00b6d6bcfb528453eb81e435270af9cd65188',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4F6BS_BH_UserArgs_MT16x16x256_MIpLzGB_f8w6YgxNPT0jZ8_8YeIJsqgMU5bEDKw22Xy6g=',
      'err': 0,
      'opcode_set_sha256': 'd2b2994e3fadb528fc60201d56a00b6d6bcfb528453eb81e435270af9cd65188',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4F6BS_BH_UserArgs_MT32x32x128_MIwihp4-Nx4c3WF7hYRcYzTQ-CpDLJc8brzp1XzY7Zqq4=',
      'err': 0,
      'opcode_set_sha256': '3bc4d11a66efdcaf17511eb6507388f63bb8efa652ad619a54c11e7c1bf37f71',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4F6BS_BH_UserArgs_MT32x32x256_MIEGJdpIXMuQJm412CzFl4FRdQqss_fPUgO-rOQ8MyQO4=',
      'err': 0,
      'opcode_set_sha256': '3bc4d11a66efdcaf17511eb6507388f63bb8efa652ad619a54c11e7c1bf37f71',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f6b6ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B6SS_BH_UserArgs_MT16x16x128_MIGHPnatMGOeP6Jd9wxc-q6VFbScAL3oLD7D47l5F0xgg=',
      'err': 0,
      'opcode_set_sha256': '0f17d21739438da9dbdb1e15419551d77c418d31041e0c8528f557877e509180',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B6SS_BH_UserArgs_MT16x16x128_MITJwHVQ_HroOzhW4AvTwC7iDsMlDCZ2G1FMYKq_JweoE=',
      'err': 0,
      'opcode_set_sha256': '0f17d21739438da9dbdb1e15419551d77c418d31041e0c8528f557877e509180',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f6b8ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT16x16x128_MI16Dj96LGPPtOhmTqBuJ5OTs7n9A8fUQayyeGNonz-TXrs=',
      'err': 0,
      'opcode_set_sha256': '0f17d21739438da9dbdb1e15419551d77c418d31041e0c8528f557877e509180',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT16x16x128_MI16Yp7xp6t2ETFoPdBmKZd-cujaR2iwvmtnEVPt4cZ8zms=',
      'err': 0,
      'opcode_set_sha256': '16799a78cf0894ef3c01e00120a3f79d676e26836a16770957c0653ba2161c2a',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT16x16x256_MI16lImlx1z4bTGNUnIfkIGTgmzjAyUF51QAfp4pr0Vc-5I=',
      'err': 0,
      'opcode_set_sha256': '0f17d21739438da9dbdb1e15419551d77c418d31041e0c8528f557877e509180',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT16x16x256_MI16xpwrQBmv3t7nWubzHNBTJ7iSxfaUNEeWXJFzKRcVwK4=',
      'err': 0,
      'opcode_set_sha256': '16799a78cf0894ef3c01e00120a3f79d676e26836a16770957c0653ba2161c2a',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT64x64x128_MI16_XBvIcWM9cJobFx-N_g5M12ygU85Nwielhju2zuC9x0=',
      'err': 0,
      'opcode_set_sha256': 'aa570a4cb7d3d5ca7653f6bb329947f8372a8c3570cf1227ee8a6edb0ec48306',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT64x64x128_MI16z8DT-qEU--gGIY5w1VB0BCJFM-Q_GQMlP2Xjblvw2JY=',
      'err': 0,
      'opcode_set_sha256': '5ce420f4620ead65e2c13475dd4346164cf071422b0effdff6af015a2f77268c',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT64x64x256_MI168INO93hapSlACu9PIWqEtK4IHwC1MbsYVdJgNByM8uo=',
      'err': 0,
      'opcode_set_sha256': '4e9e062262ec9587cd29dc4de593f0c1307264bc867d5584eea83dd179679776',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT64x64x256_MI16z7-Yhxz9aAUW3Dq7ajSpSvWD30xO3jW2mwVS_QstTCc=',
      'err': 0,
      'opcode_set_sha256': 'aa570a4cb7d3d5ca7653f6bb329947f8372a8c3570cf1227ee8a6edb0ec48306',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8b6ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT16x16x128_MI16Bf6EGJP-YVC-8WvDt6kkfDzymKq2KM6HZuOQHX68f3k=',
      'err': 0,
      'opcode_set_sha256': '16799a78cf0894ef3c01e00120a3f79d676e26836a16770957c0653ba2161c2a',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT16x16x128_MI16kgDuFdhh5tCmPZQGk5E3wZbGEzjOT7Qf7vBRqtfzmK8=',
      'err': 0,
      'opcode_set_sha256': '0f17d21739438da9dbdb1e15419551d77c418d31041e0c8528f557877e509180',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT16x16x256_MI169CuTwcwT2Gi_TvQoL-FKvnk9EDla7y89Dq0xfzIQ6Qo=',
      'err': 0,
      'opcode_set_sha256': '16799a78cf0894ef3c01e00120a3f79d676e26836a16770957c0653ba2161c2a',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT16x16x256_MI16UbiqUoy46xDI_xjkOnwtiByqAKeNttkqgYxPXbbnHkw=',
      'err': 0,
      'opcode_set_sha256': '0f17d21739438da9dbdb1e15419551d77c418d31041e0c8528f557877e509180',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT64x64x128_MI165QVvhXdujvfPC1EdgLPQ-Qb5ss6Lef6zprywf2qD7VE=',
      'err': 0,
      'opcode_set_sha256': 'aa570a4cb7d3d5ca7653f6bb329947f8372a8c3570cf1227ee8a6edb0ec48306',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT64x64x128_MI169bXof7I_8VgOSgtraW2dmS3G7tQGWb-deDNuBSRWn4w=',
      'err': 0,
      'opcode_set_sha256': '5ce420f4620ead65e2c13475dd4346164cf071422b0effdff6af015a2f77268c',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT64x64x256_MI16LkonngOiRowRtfYolbSSDLZslx8J2pBjiJmLAkMVkR8=',
      'err': 0,
      'opcode_set_sha256': '4e9e062262ec9587cd29dc4de593f0c1307264bc867d5584eea83dd179679776',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT64x64x256_MI16SI5nQItr3KhoMFVEySya1w-xmhLT2qOF6g7cuJcDJ2g=',
      'err': 0,
      'opcode_set_sha256': 'aa570a4cb7d3d5ca7653f6bb329947f8372a8c3570cf1227ee8a6edb0ec48306',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8b8hs]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MI-A6YlfN4IP8GtZM-dKRQa9dBMXGtySC0YZzBs31f3HU=',
      'err': 0,
      'opcode_set_sha256': '3dfad077476177a980348f66636547071ba066642413c2947e279e5ae8db1c48',
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MI0LOVqTGZrJJzNIUFB6xSrmW3OtHUOpQRYMpyZVj2cR4=',
      'err': 0,
      'opcode_set_sha256': 'ffc4200c12ce3bd045a8b3197f5a7d6b8c213e16f3dcc5718252b9d331048906',
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MI3aAlzVXMDcUESkQXAs0J-p9c6UkIgkJkkIfct_xS9PM=',
      'err': 0,
      'opcode_set_sha256': 'b9a1bb4d9a1aac818c819695f4c91f995a43e1a24b4b2c93fd347c40d537b20a',
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MI8JXBpHTCUtBYXfug6CGH32D6pciGGj-A6MB-zaokqS8=',
      'err': 0,
      'opcode_set_sha256': '383fdb8f19f4ba4fd69675733b8d7b06c4cf90dc9065b2b7ef1380de59bff660',
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MISkj7dv3_9UFMeuEGiEbYUS18kYQm_c8qdWtqnqHbfCw=',
      'err': 0,
      'opcode_set_sha256': '1e925bc9befa0d0ba85e5deddb8a1540f708f81fa8bc7fd385b64d4b630c5cf5',
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MIX0SJh-7rTgcNqRJPOvBQFs9g8wI6AfIO5Og4jYwK5qA=',
      'err': 0,
      'opcode_set_sha256': 'b6626ac5e45f5daf08452de4793f46c5e710f7d777b6e5efe9e4773676332d9c',
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MIdzy2MzXzFiPhV9IcxZLhj69sO9pjsAULb-Ko2CXlVj0=',
      'err': 0,
      'opcode_set_sha256': '7a30bd29c77fd90f229c9f45cefdd3a37bd390238d4f294a1742b9b13dfcfd10',
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MIwhbjDa7WIWYROZBxPAQ-9621scgIKEYWgkwp_62wmA0=',
      'err': 0,
      'opcode_set_sha256': '68272ee85cf58ef451f0bb235368da77d796ef2bf84ece8aa1250b6ed60ddd00',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8b8ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MITvcX9iF7Un94jFoCJjMmjG4_p3DRGcqSC2qcCZwOmsE=',
      'err': 0,
      'opcode_set_sha256': '595bba0b85c943896f6300bca5ad895c2525ec8cb7740d2b18cf3000877ebbcb',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIUzqQrmGXY3YnP6dPlI-_peu9XHR7cH9J-4FOOno5fZw=',
      'err': 0,
      'opcode_set_sha256': 'c6f882fcc3bdd54e96f36774b558dc00e0a42633b75410ddd9a463866ed82f71',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIbfGCEWsBSwAOnJBUhBoaPpiSYmoi8G-VNLcfviQcHoc=',
      'err': 0,
      'opcode_set_sha256': '187427ccd301bf5962fc98a7ad08be7820463b2b72bf6dd9e0223a244fd41311',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MImHmGt3zujoNjUNvTAJcaX0qVCVFaW7CHhoh_liVmVhA=',
      'err': 0,
      'opcode_set_sha256': '833677ceb529e2f5c36c82affa5f27f866bdd3b5e32a6be034545348a5ec1936',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8f16mix_f8s]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_F8H_HF8S_BH_Bias_SB_SAB_SCD_SAV_UIru5QoUefU2sahRszZ4b4UVMLevXFLyw5ccrkP79oRs=',
      'err': 0,
      'opcode_set_sha256': '64fe5f9d3933caccd6a4486e8c10f0eec04986fda45bde16ad1c40396ddb1114',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_F8H_HF8S_BH_Bias_SB_SAB_SCD_SAV_UjqICf2Muwx2YULiGMoXoWBcM1S5868HAb8rkCfdItd0=',
      'err': 0,
      'opcode_set_sha256': '64fe5f9d3933caccd6a4486e8c10f0eec04986fda45bde16ad1c40396ddb1114',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_F8H_HF8S_BH_Bias_SB_SAB_SCD_SAV_UnQQkzdYoQdHExLQGX4KCIadVccjwjdX5_10ecduS2-s=',
      'err': 0,
      'opcode_set_sha256': '64fe5f9d3933caccd6a4486e8c10f0eec04986fda45bde16ad1c40396ddb1114',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_F8H_HF8S_BH_Bias_SB_SAB_SCD_SAV_Unl54kXZuOO506WIMfMqQKBtOC_nH4so5SdS8IdFsHiA=',
      'err': 0,
      'opcode_set_sha256': '64fe5f9d3933caccd6a4486e8c10f0eec04986fda45bde16ad1c40396ddb1114',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8f4ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT16x16x128_MIKtn5fg1hFD_g-QUCo9n6OGnigqEZ0dPCw-HU50tcvq4=',
      'err': 0,
      'opcode_set_sha256': '24ee202f77032c8e3135b919a5007efd5325fdaed627062aa6f1671a4e706bf3',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT16x16x128_MIeMpHGXnVx1V8mnC43bHjTOsAOX4sw2CVGxRA49lXqkI=',
      'err': 0,
      'opcode_set_sha256': '1fcc6a8f92d3f0599b7372e498f97f556b3dcd9af3f1267609ff6882d809622b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT16x16x256_MIOr5M9w8z_mYddKgL1sYEpHjEdsou9OHCyEgmuepBlzo=',
      'err': 0,
      'opcode_set_sha256': '1fcc6a8f92d3f0599b7372e498f97f556b3dcd9af3f1267609ff6882d809622b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT16x16x256_MIn1OwCRTuqINHAPuglnTbwDtZ5-Bn-M_01hRapNVjdas=',
      'err': 0,
      'opcode_set_sha256': '24ee202f77032c8e3135b919a5007efd5325fdaed627062aa6f1671a4e706bf3',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT64x64x128_MIKmIOesaoHlPDobo8hQ1ro6DYlnVIdhsYnv2pHV1qkDE=',
      'err': 0,
      'opcode_set_sha256': '3b43ce2d54b91be9022e4d5b1b88bab54e455116cf75ed16c80503a6da8e1a7a',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT64x64x128_MIWSkXDrBz34teD4PRoXxdfMJyh7yg0nlEfseKpv_Z78A=',
      'err': 0,
      'opcode_set_sha256': '1bfe793d26be7c8cc0d22a242dfc64e55decafa20b32306372700501e99e0713',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT64x64x256_MIPdt7Z7yXPbBW4-ZIPeFPG83R2GgBQfscjdZ6Kv8ctAk=',
      'err': 0,
      'opcode_set_sha256': '3b43ce2d54b91be9022e4d5b1b88bab54e455116cf75ed16c80503a6da8e1a7a',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT64x64x256_MId5gETCZSVoEKmC1WI8lRmJ1Ee2NpG62mLQOhEEPWA4o=',
      'err': 0,
      'opcode_set_sha256': '1bfe793d26be7c8cc0d22a242dfc64e55decafa20b32306372700501e99e0713',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8f8s_cls_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT256x256x256_MGo_SwPAZuXk5E6gEKC1iBqrTSmL7ld7KqE2yoCcn-vQ=',
      'err': 0,
      'opcode_set_sha256': '2562538f8a6d3c559d0beec5b4db1d99d659e1ddd05d2bd994964b9f2cd49d5b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT256x256x256_MNRyK0Ts7aRn1AsFd-YbtlZ0s_iy_sZxi3Pb6ec6Zcbk=',
      'err': 0,
      'opcode_set_sha256': '42bb9b0c658812b272cf3388ae8bad7cba5041f0a978e84d897849ad5e148062',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT256x256x256_MyYiZXviZASLCh0AIo1U7GxVGdmkM25NBrz5w4S6kjwc=',
      'err': 0,
      'opcode_set_sha256': '42bb9b0c658812b272cf3388ae8bad7cba5041f0a978e84d897849ad5e148062',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8f8s_pk8_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8F8S_BH_UserArgs_MT256x64x64_MI1z6XZx4wkFR7taWgfqaFjjVAHEFjZ1a71lVCQmPph2uk=',
      'err': 0,
      'opcode_set_sha256': '2e37b0f2e56578df1dce4dc0cd4f4d1d17259d48cfa56b1ead3fdfecc0b4d92b',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp16_HH_BHS_bf16mfma_gfx11]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT128LSDWZ5vgDr2rjko_wNkHFPoovR6VjWA515H6g6oN334=',
      'err': 0,
      'opcode_set_sha256': 'e024da93031d326973bd308a851a9aede98ab4241e06ef42a4301e0c87f33bc6',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT128Y9h_mm2ITwIngjFELayFeTcvklN8cFvWI3fFeS2i5EQ=',
      'err': 0,
      'opcode_set_sha256': 'ff4c1b09d3b2e4e7331c2d2945f0abdca61e00fcc41b7cec0e5e179bb5691c2f',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT192RuiLfMzFovbBxvoq-kk6-wV0DA0Zpzjw5KqDQbzG9nU=',
      'err': 0,
      'opcode_set_sha256': '8fdcefa8751d572dba4bef78f98ab88f5699a2d99af2121f545e49006f2e29c0',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT192bIkE2_o2h8iLS1mR6XC8yQVRNVayPXO-QBrkFouR7Jg=',
      'err': 0,
      'opcode_set_sha256': 'd61983e6ec5706a7a340c1bef257aed9c5d1222b1ff09babafd859ffcf6410db',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT256LCc5Yo3lAiQxqHoG_E1UitniSaLzaqmNeseORJO0ECw=',
      'err': 0,
      'opcode_set_sha256': '226c10933a14bacf2cb91f958e84da1e6f5c60f338401c4320b154c0331ced95',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT256f6LTiSspdhQ_ymDUZ7YquY-Eq7G5Hby6jxQiV1CENck=',
      'err': 0,
      'opcode_set_sha256': 'fe06e8c9430346ed06626b9bdafa38621d9190857cc711bccf481993f7054973',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT64x6WamcbFanK73Yo5LRa48sNcd66xmIrzfEq2qeMM1Auw=',
      'err': 0,
      'opcode_set_sha256': '758ef807a663b2a6d5cf4b08fe5ab81ac079853bcf949cf3484ebce11b50751f',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT64xYxPQ3HxbE72a9SsobzlTSs0T-CUTUpr_ywiXksWL42g=',
      'err': 0,
      'opcode_set_sha256': '751955e3dd492212df6c3993f17fd9e08fb7a9c67a98d906e7bd4ff1349c8e4b',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp32_nt]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_Bias_SAV_UserArgs_MT64x96x32_u-1YCm4eHvC9l8XsVKpRCzQJropXcuOiOeWGtf43Rvg=',
      'err': 0,
      'opcode_set_sha256': 'd084abd2c7232753c077486b6eab80f41a99bd0c3c37a4f0914efcdb60ef4632',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp8_mxfp4_bf16_tn_act]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4_F4BS_MXAE8B32_MXBE8B32_BH_BiSCQMlliX2A7gIJBlnovGSbqQBPtM6XqB5UT-43O9CdY=',
      'err': -2,
      'opcode_set_sha256': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4_F4BS_MXAE8B32_MXBE8B32_BH_BiXbO2E7MbpoVwBXYdEXcNeGz2X99sKYmtzQSkzOUGYo0=',
      'err': 0,
      'opcode_set_sha256': '3aa000bf5e84ef982efaaf4b5faa3244b82188a614d8b183a7c7d572d75f5ba7',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4_F4BS_MXAE8B32_MXBE8B32_BH_BidTWrPr_uOEYgpDerJZgcueww57Nd7uB4kz5n1POG2cs=',
      'err': -2,
      'opcode_set_sha256': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4_F4BS_MXAE8B32_MXBE8B32_BH_BifOAfkpfW5ov34zSNd0eXi_m-d_oM2NYZdMMsi17iwuw=',
      'err': 0,
      'opcode_set_sha256': '3aa000bf5e84ef982efaaf4b5faa3244b82188a614d8b183a7c7d572d75f5ba7',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp8bf8nss_gradient_bias_b]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NB8NSS_BH_Bias_SB_B_SAB_UserArgQpvvlJL7Q3VcxD0f9i5JrQ16hXYccfycLeKyejHhvgA=',
      'err': 0,
      'opcode_set_sha256': 'bae83b750411440d42dd6fe063c1347a224fc47eaa22b3e8c405d47aaed09751',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NB8NSS_BH_Bias_SB_B_SAB_UserArgxsiW3rXNcGBJAyhDcybaVIt5nlgFD_Z9QOaVYSFcgQo=',
      'err': 0,
      'opcode_set_sha256': 'bae83b750411440d42dd6fe063c1347a224fc47eaa22b3e8c405d47aaed09751',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp8n_use_e]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABABcm2RumuVQSEgXxQ2jXIK0JkAUZrHRxpKVzbrzEp74=',
      'err': 0,
      'opcode_set_sha256': '687b1e221a330cb92a748ae8cfd697cfa6af7de48ecc9baed92733c83d8aa9f1',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABe3kHRL3I9PL6v16BlEUe_1tBeriTZJQ7G64xLtUhkb8=',
      'err': 0,
      'opcode_set_sha256': 'f8846de096071c58aa8d5e69776f815747f467ebedc5ee225c29d01f4d8fb5c8',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABhKBkRGtqiApBnK6OT1D2cTk1Tal1CECNDZIehWrN-AM=',
      'err': 0,
      'opcode_set_sha256': 'f8715ddafa08072bf7b402010020bd73791b63311e6cda9df1a7bdfa2c418292',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABhew9myg5c6EwuhXYKrtygmdtABp4uu3BE7qLHyf-PzY=',
      'err': 0,
      'opcode_set_sha256': '687b1e221a330cb92a748ae8cfd697cfa6af7de48ecc9baed92733c83d8aa9f1',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABslrMJFFLiMrFzH7tsS4etQogDXIctxY8y62q5ZBY708=',
      'err': 0,
      'opcode_set_sha256': 'b30f1c95c0683478f6e920da278678861fd3e280388f25a869270cb16bcf880b',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp8nfp16mix_hhs]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_M8z7Xb2br0UezJrCXKUeHtbxh3ksM1vXIBZRbt9fLZSc=',
      'err': 0,
      'opcode_set_sha256': '5ba1254a2f48f21398c6edd55d941d592cd89c4cfde6e69b1387a8cb652dd969',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_MIWjtX1NTeWFA4vbgvurZepAzUoRYtWhhXZ-7aRtmTT4=',
      'err': 0,
      'opcode_set_sha256': '53b1acfe5777df2eabfe43ea1a66f41f261df8da2996d592cced1853da032f9e',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_MMxETiFwHkbnP1AD0oasH9Hm9lZRHvRIVcLhA9RWZV1c=',
      'err': 0,
      'opcode_set_sha256': '02162903389ac10a742d4d29e5d012b9c87fce8d2c5c4183c2225b16c97c1b8a',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_MTxiIKPg9U1yeXy8umZJ5YNLI2kwFcs2IstKoa_fiREk=',
      'err': 0,
      'opcode_set_sha256': 'acdf0997059bf9de1c15566e6ba7566a13a163bbe9643124f78a76469bcf6454',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_M_UYTe9rF8RxyOwQn48HTY-HTu_DyHxUycOIzD3zrweY=',
      'err': 0,
      'opcode_set_sha256': '8b0e41d943f284c33c6490bdf3d1c7521aa1a5df3468357f5c6159c46908d9f4',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[general_wgm]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT19ufKESjCnhjWNMptS4wBXm-cSB7ghylrXioKXhfU2_8=',
      'err': 0,
      'opcode_set_sha256': '620e55a05bd97149c8c9cdcb5175d45d0609e6ef90877537508a89faa7e81557',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1G31oJPlWeSU3Jkr1Mi7FzmHv31ppgdNLoCPRPpYcvBg=',
      'err': 0,
      'opcode_set_sha256': '4ca09c64ce5b667b50db6108e58f1e4b8a50786745649917426bc485b738e50b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1KSj7qSbo08TzWefaFfgEq1-4I1uRSF5nwZOJVBGV9_I=',
      'err': 0,
      'opcode_set_sha256': 'cf16840e8f3c6d7aea88bc35495af5564abae87df7f59099e039158bbc83872b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1LqJh1kVE0ykhJZgaJCF9h9syoaiVgXvHY-2LyxA2MD4=',
      'err': 0,
      'opcode_set_sha256': '4ca09c64ce5b667b50db6108e58f1e4b8a50786745649917426bc485b738e50b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1cyXoeA-Gu0kn6ALHfNyW-BfUugTEWjSM0pxBCrLjbY8=',
      'err': 0,
      'opcode_set_sha256': 'a70a7961f2b4ba3c5c6c9a0eec7cf16d335d61258bb8e51e4e23b3375520b968',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1lAbWlw_q1DKfgR8FFs-dh2DLhBFa8YRGYkaaOstvVF4=',
      'err': 0,
      'opcode_set_sha256': '4ca09c64ce5b667b50db6108e58f1e4b8a50786745649917426bc485b738e50b',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[hh_f8nhs]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_F8NB8NHS_BH_Bias_SAV_UserArgs_17oVtYDMCo3XQwNHcEO27av89V14IjUPVCt6Tez_Bnw=',
      'err': 0,
      'opcode_set_sha256': 'c4beb0c2e7875cd3bf0e4edc9c41aa67c529be6bf44078466077cf34c6baa1be',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_F8NB8NHS_BH_Bias_SAV_UserArgs_XFmq5XPXP9gdEv49a-xUouM4g9aEapHJzY1QMJcVLtI=',
      'err': 0,
      'opcode_set_sha256': '6af0cd6a1ef11a53e8507ae65931a74b86ac53defe21fd46eb124accbde8fccc',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_F8NB8NHS_BH_Bias_SAV_UserArgs_aXCpnmX_Oki9fiJw129W4cAoIvzTEiqvdlT-bmL1xU0=',
      'err': 0,
      'opcode_set_sha256': '704a5d18b8b77d3e78ff4a8bda60e2bf7a449b475385dcad76d7077ea5635527',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_F8NB8NHS_BH_Bias_SAV_UserArgs_p6WnT3Mg8AJkr6j8WCcHiW_KWf4JcudvHvFb51VcOw8=',
      'err': 0,
      'opcode_set_sha256': 'c4beb0c2e7875cd3bf0e4edc9c41aa67c529be6bf44078466077cf34c6baa1be',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[i8_gsu_gfx11]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_I8II_BH_A_I_UserArgs_MT128x16x32_Ml3hokvjiDvKhJoSu7S6QZECSjX1jZwZ8v70vAgw41A=',
      'err': 0,
      'opcode_set_sha256': 'bf899abf49088ed9e39a9017a73165c1ded9b412b538045d8eca38ccd1a3d1f6',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_I8II_BH_A_I_UserArgs_MT128x16x32_oPJ0D2_hJFk7QWHePL0M-haYU511AzMLtMCse6mxR34=',
      'err': 0,
      'opcode_set_sha256': '4cd08e987188d1f02c9b16a7cbc1bd970c6af7433218f3f9de3514dc4e65d921',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_I8II_BH_A_I_UserArgs_MT64x16x32_MfR5y-UejdyrLhRzzREVsHW0jREDYnYWZbpfcdoaAyws=',
      'err': 0,
      'opcode_set_sha256': '4cd08e987188d1f02c9b16a7cbc1bd970c6af7433218f3f9de3514dc4e65d921',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_I8II_BH_A_I_UserArgs_MT64x16x32_MjRS5Q2KHLFOlgHSZ7lB2V03oVXNpOp6nvsCayIY8so4=',
      'err': 0,
      'opcode_set_sha256': 'bf899abf49088ed9e39a9017a73165c1ded9b412b538045d8eca38ccd1a3d1f6',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[icache_flush]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_F8NHS_BH_Bias_A_S_SAB_SAV_Us-FbtZ2OJPyCTTH_uRr2_NzMFdIk4g-BDH-hBF1xp3kY=',
      'err': 0,
      'opcode_set_sha256': '427233969b1b189ebd657b9661fb55f8ad1b5fbe864299c1471c3e2382e1cf44',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[lsu_fnuz]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8N_HHS_BH_UserArgs_MT16x16x128_6bvUmfLhajQBNzi5gZQGaLBWAef4vsqIGnnYodYTyb8=',
      'err': 0,
      'opcode_set_sha256': '54f761cafeaddf825d5bde86cd3b7663700727ca36b26465b1ad333e77b255df',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8N_HHS_BH_UserArgs_MT16x16x128_IVVL1k1LGXDN_AQTRyrYM4ytjObTlRvEyKND-YgRhhc=',
      'err': 0,
      'opcode_set_sha256': '46ad49a6bd6784c1a843e648aede736264492e51f36b1fe9211346585f6962c2',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8N_HHS_BH_UserArgs_MT16x16x128_Soy89o7mkhUCaaxS3cANm7ARVEwnsi85buRWm7_Hz08=',
      'err': 0,
      'opcode_set_sha256': '589a222f8e5350684482a9c3ba285569f0720e56f308afd4d9fadaf09f31d1ef',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[lsu_i8]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8_BH_UserArgs_MT32x16x128_MI16x1T1pEelm3p748tPqXwuDNzjgS-Z_zrGbq6Z3VcsBN4aM=',
      'err': 0,
      'opcode_set_sha256': 'c5f9f22f42fae3543084d0ca8f44baf91d80d70af6498d608d7043d0c920de9d',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[mix_cvt_after_ds_fnuz]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6I0DQPYYXfpQkII_IHPlxnvjd45gaVS0JzS02Hm3p1S4=',
      'err': 0,
      'opcode_set_sha256': '85e32920a54f2241e4dd9aaa9301104ca3998ff650b2dda3a8f34aff355828e1',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6KMuoM4g2r45XDVK5u3PI28SXw-o3hB_76QwTOY_H_6U=',
      'err': 0,
      'opcode_set_sha256': 'fc0cb00fa90195bb66ba8dfdf43091c54c2bb436f03046e18116f1aea47d922a',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6MOdnkaLLd3jszHuh5QVpqcs1_n5OEphkC91OdcD1eMo=',
      'err': 0,
      'opcode_set_sha256': 'c2ca67806f4a1a4642acf9c683ef1ac093af54cfbc428d0b1aeb4dd7da2c980a',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6NL-UuUOOqavEmpca2H64Rh5IoKu6klK7qTp9J2i-GmU=',
      'err': 0,
      'opcode_set_sha256': '78c50fc4e4f63c78dedfc21b2684a61b4b87197657790eaa2264641868543ad5',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6YdfA_dfS3Syi08_EjPb0tbolN2WQUB1qu0wdXmxRFvA=',
      'err': 0,
      'opcode_set_sha256': '509e678b50cb3f62b03feaec52b93c02be2fcee9998c1b8801fe2b022fd0f465',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6erhKtvmusIQbSHE_LOYZ6Si4YLqk2Md09bGxwkqlihc=',
      'err': 0,
      'opcode_set_sha256': 'dc87efc2aa71548cc2eda0adc81bd1571b3137e80075475f52b814d9d1f259b8',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6tYj6Y2wMXeYsBs8grsSTn5sOSwC_UmzJFY3GqgzeNHk=',
      'err': 0,
      'opcode_set_sha256': '5784d6bcc0c3cfa9a4d0edf374a14730a5b24680e4edc20b34bf089197026137',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6wSvQ2pRHO6by_2MnRLzkJSWdHgXlJ6yc8pFYL4yZ2Aw=',
      'err': 0,
      'opcode_set_sha256': '2e2c8b3f4e3dff25cf6341824ef13d742218e34e4415e1685282c69286085c76',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[mxf6_tdm_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F6SS_MXAE8B32_MXBE8B32_BH_UserArg2JdQ8GldtHfhBZnU2on_VUFJ9pyXo1W-93z-80c51CM=',
      'err': 0,
      'opcode_set_sha256': '02237fc15500181ea37e3ba45a872691b7e1eeffbe1056d21045c3c199a10697',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6SS_MXAE8B32_MXBE8B32_BH_UserArg4Ql4NH7UUNZqGr4VfaSGAlKFqqtMJvbot-TMg6i8f5s=',
      'err': -2,
      'opcode_set_sha256': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6SS_MXAE8B32_MXBE8B32_BH_UserArgg5uKjTdfEGNMYzKC-3dC8uL408tuETxr_cDiBS-qFVk=',
      'err': 0,
      'opcode_set_sha256': '02237fc15500181ea37e3ba45a872691b7e1eeffbe1056d21045c3c199a10697',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6SS_MXAE8B32_MXBE8B32_BH_UserArgrh8ptSKhz1nFT46_8zdXN1ZWL453YMvzTH-uUMR_TTw=',
      'err': -2,
      'opcode_set_sha256': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[segment_interleave_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI16D9rr9ZN-tV90FfkUrCR8cwaJREutyz3IEEjOXhTUGk=',
      'err': 0,
      'opcode_set_sha256': '50427940e55a08788399f0a1b20473d9def3f00f05088da010497e70c718b4da',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI1H3iUmsv0tUZkgBxi9eudkup7ecwOgjlxbc1AhPQleWU=',
      'err': 0,
      'opcode_set_sha256': 'e45bd05d3215a5951ea3f42800ed4d5fd32981de9dec296cc342761329fb33fb',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI1XrxEAb3TLZVfYuvDtDsueza_uggxePtrB7t4UWjAHE8=',
      'err': 0,
      'opcode_set_sha256': 'e45bd05d3215a5951ea3f42800ed4d5fd32981de9dec296cc342761329fb33fb',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI1vTI-O09pxYmCJnpVu0djaaC8rwNWisvEEEUvD9Um3aI=',
      'err': 0,
      'opcode_set_sha256': '50427940e55a08788399f0a1b20473d9def3f00f05088da010497e70c718b4da',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x256x128_MI1-im7DzXEFH_XsRU9CpBdxdZ29v83xa55kKT3wPjx28o=',
      'err': 0,
      'opcode_set_sha256': '0ae9224b815a1f5131e91362f7f93ce1780b5a3feffe45735768b4ba8b130f6b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x256x128_MI13do6WNoEI6x-bOjMzVspHarGdSiDkrAbqgoE8q0xOTs=',
      'err': 0,
      'opcode_set_sha256': 'a8ef09ec8cb97e5fc34be63ca9aae1b0fe53f2bfdfd13a57a1e1e5048a022932',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x256x128_MI19mgIreeGyOpg_XMbDoIo4f9JG9oDJfLPfuCKoC9dwDY=',
      'err': 0,
      'opcode_set_sha256': '0ae9224b815a1f5131e91362f7f93ce1780b5a3feffe45735768b4ba8b130f6b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x256x128_MI1wLnsQH7mjp6dtZyvF61eNNt9NL1527VoW_AR8iUsaQw=',
      'err': 0,
      'opcode_set_sha256': 'a8ef09ec8cb97e5fc34be63ca9aae1b0fe53f2bfdfd13a57a1e1e5048a022932',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[ss_bss]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT16x16x32_MI16ZsV7Fk_QsoFpoqT_m7bhCh_ma7gWq080uh5d-kl9yj4=',
      'err': 0,
      'opcode_set_sha256': '40e784a83d7c016a1a08215794d5117a9ab3893285320c42154a07f41d07d87b',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT64x64x32_MI16BquvKrshxOgDdU89ScvS3-CQkvb1hABSIMjECKd3WVk=',
      'err': 0,
      'opcode_set_sha256': '04ed755a5c05ba4f0043cb406a7fd0ffce9c2399cb2160b17439e647055c9505',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT64x64x32_MI16D7dPKqNkQOXjXOJyfhhtEBUbT8i7YMg0j13eoT-qr8g=',
      'err': 0,
      'opcode_set_sha256': 'bc70f93a670149029adb1012d5f4d59c4bee092819b64319355a8df63c575601',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT64x64x32_MI16ERy-eLehwSiK15VJ_NluoDCSkhmfRG6t1lrJUW8ooc8=',
      'err': 0,
      'opcode_set_sha256': 'd72d2d37172c1ca5fa59556fd71fcaf0e1048210c4abebbc55103dca7036352e',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT64x64x32_MI16FbbUKQPqhtWZjMkUnRPJIy0VwTLj5I7OWYk6mMpsQWI=',
      'err': 0,
      'opcode_set_sha256': 'c0c511f9390d6f842dc8512ced1fbfa6e8abdf556a07760878adf1d874355c2c',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[subtile_bf16]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1G03lN_6NcqvWbLYkVP4zmBjsVLA9E-ZeDihPZO8zThs=',
      'err': 0,
      'opcode_set_sha256': '269e20e0355527b93803509f0e5957d45b5701fe139ca4563ec1223c387a9a2b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1bK1AAglcu-hOQEpTafYiYth7xwKlZetV_GXq_vHRETE=',
      'err': 0,
      'opcode_set_sha256': '2f8a6adad281398debd4f703e185b534b316f18c90021dd8291bdd9913cf2db2',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1dwgwe9bODmQUS260FhqIlMvGkP_hRvO2Wn4kOWYy5e0=',
      'err': 0,
      'opcode_set_sha256': '269e20e0355527b93803509f0e5957d45b5701fe139ca4563ec1223c387a9a2b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1fOgNMhjlIZqlKk-GK675hdEi8XPdAO9oGXuZUe5Q0Qk=',
      'err': 0,
      'opcode_set_sha256': '2f8a6adad281398debd4f703e185b534b316f18c90021dd8291bdd9913cf2db2',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1wI0XoI7BpOIsFcnBNqVOXU6jpVC3njDiiE8Tb1HD0WI=',
      'err': 0,
      'opcode_set_sha256': '269e20e0355527b93803509f0e5957d45b5701fe139ca4563ec1223c387a9a2b',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x32x64_MI16x1BOQdp3GPnLdDMtPPtvJrQuMzsZpRVRILzJ6-Eatf1IQ=',
      'err': 0,
      'opcode_set_sha256': 'd54628d5918e1d5f65fa85404c133dcc6b9a3fcc8c90dde08b38b25c3136ac2f',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x32x64_MI16x1HAQTa1W7qzbFlI8fqcCx-3P3rAlE_-OMERNyDLFCCsM=',
      'err': 0,
      'opcode_set_sha256': 'd54628d5918e1d5f65fa85404c133dcc6b9a3fcc8c90dde08b38b25c3136ac2f',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x32x64_MI16x1Rk6PC1XgU7yTRR3iB3-rlW7REgcrLYgL-T4ABCo8LNw=',
      'err': 0,
      'opcode_set_sha256': 'd54628d5918e1d5f65fa85404c133dcc6b9a3fcc8c90dde08b38b25c3136ac2f',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[subtile_bf16_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1KKCLiphmtf9I35SJ8BizKu9puPn7OJnPXdYEjj0b9kI=',
      'err': 0,
      'opcode_set_sha256': '4a98ff554999330329fc3837e825affed524e287bceb0a5fa04dfa1eac5c6e87',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1Qraayl3vbDMEq9HiYQpMVygjmzk3P4OoqyTOleQTWGQ=',
      'err': 0,
      'opcode_set_sha256': '4a98ff554999330329fc3837e825affed524e287bceb0a5fa04dfa1eac5c6e87',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1RiCy9a20uLdBgJLzkfsQ5fj1vfbbHNbRKXGQkXyC8_E=',
      'err': 0,
      'opcode_set_sha256': '4ca59a7cf10b2b730c084b1e570f524bc33b37cd4cc999e0b9f324f859e2bcd8',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1TfKDn-0KQZ4q0zbwk5co2LHIFzDngBBqMYDHAqGBxBA=',
      'err': 0,
      'opcode_set_sha256': '4a98ff554999330329fc3837e825affed524e287bceb0a5fa04dfa1eac5c6e87',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1aXPEnYi7Hyp9cosygbAgiHnPNIAXrBKANZnnr929u60=',
      'err': 0,
      'opcode_set_sha256': '4ca59a7cf10b2b730c084b1e570f524bc33b37cd4cc999e0b9f324f859e2bcd8',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1jqkpVWjtH59WhjC_8dMvLbjWyqeuuG_0IjN6ZHDIO2c=',
      'err': 0,
      'opcode_set_sha256': '4a98ff554999330329fc3837e825affed524e287bceb0a5fa04dfa1eac5c6e87',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x64x64_MI16x1J8N2rsvKEOUOpCcCt2IxgPMvz52ry4r8zPYmx4qe_ao=',
      'err': 0,
      'opcode_set_sha256': '4ca59a7cf10b2b730c084b1e570f524bc33b37cd4cc999e0b9f324f859e2bcd8',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x64x64_MI16x1jjGYjeMDUgwk4lpmi4BEPw7Vzt4CwUXDMfpu0gq8v30=',
      'err': 0,
      'opcode_set_sha256': '4ca59a7cf10b2b730c084b1e570f524bc33b37cd4cc999e0b9f324f859e2bcd8',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[subtile_mxfp8_bias_sav]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_2AqPQWb6QWPdDqhoGiRq17xK54_xyMw84Cng3CpQXZo=',
      'err': 0,
      'opcode_set_sha256': '0f9b74df2f19ba96e2090b1f98407b770b3653bb19afd8d5665aa95a7b2d585a',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_N0GORpDwHlNxeFeFBjkoUMi2oQfaBlgslXFzdLgbEmg=',
      'err': 0,
      'opcode_set_sha256': 'd55a0fe08e66c68099396e0dcb6e4439e7ba88239656f26f03e88837efc04329',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_W45PgRoCzFInTV7KZleqQomBnGzS5UhfpelfAKvWPQQ=',
      'err': 0,
      'opcode_set_sha256': 'd55a0fe08e66c68099396e0dcb6e4439e7ba88239656f26f03e88837efc04329',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S__uIbbI5hk05SdHtGhF247qEBWGsFtezi8lYvOxsgcTk=',
      'err': 0,
      'opcode_set_sha256': 'd55a0fe08e66c68099396e0dcb6e4439e7ba88239656f26f03e88837efc04329',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_dN_NRtq0k1GkoxCulfvJb-tS_LkpkbJK3lWXv3250T0=',
      'err': 0,
      'opcode_set_sha256': 'd55a0fe08e66c68099396e0dcb6e4439e7ba88239656f26f03e88837efc04329',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[swizzleA]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HHS_STA_BH_Bias_H_SAV_UserArgs_MTGtnIlhK9-8bcrdohe-F3-EauzWq23WdAx_v0LzT7JF8=',
      'err': 0,
      'opcode_set_sha256': '4cabb7cf1728a6359f740e5bc9aa43aa075f93f7c06880adc9793bb063c20901',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HHS_STA_BH_Bias_H_SAV_UserArgs_MTU70AHtVUYV6ae-9RBDD9FjdhVvZx6z7hv5UMcMAAc10=',
      'err': 0,
      'opcode_set_sha256': '4cabb7cf1728a6359f740e5bc9aa43aa075f93f7c06880adc9793bb063c20901',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[swizzleB]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HHS_STB_BH_Bias_H_SAV_UserArgs_MTNCaZV0R_FqkCF5YSu_sUGffKwVgfe-QsCRJaECSedj4=',
      'err': 0,
      'opcode_set_sha256': 'e16db0e8ada5778544f9183e5b2447277ab89b211c522a1d06f60ab8352c95a5',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HHS_STB_BH_Bias_H_SAV_UserArgs_MTa4hIvWKK-TzFAKoDR4V1KlbxGFwauQVBn8c-Bdn5u2E=',
      'err': 0,
      'opcode_set_sha256': 'e16db0e8ada5778544f9183e5b2447277ab89b211c522a1d06f60ab8352c95a5',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[ulsgro1]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12DGbcPbzVyvJP7ACNdboVZZYQq18giQzxU5ZP6eu8gTc=',
      'err': -2,
      'opcode_set_sha256': 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12LUfDC9FfKh-mFe5VuKkf3USPkeoi2udTT8eIrakEzVM=',
      'err': 0,
      'opcode_set_sha256': '5238b32a9b340db526a0957cc74117500f9b9c6347acf616b221604094e4b42e',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12icB0u3tf83O8kmGv-SFPvWQtytClo3vwWj-wbACqdLE=',
      'err': 0,
      'opcode_set_sha256': 'c4ba98ce40c71a7cd29e65263c260a8de8b8fdc58048c328839edea0dd824d44',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12kZDQajVBUNDkke5N8u_f85Zw3c3m7Ysur5CdrC6295M=',
      'err': 0,
      'opcode_set_sha256': 'b2a1bb59585f2164ca7d156e8d849de40d7d6498a716a3ea61eac01f24cd2cfd',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12qWeIJ_TENg0aMDVBBJDKxBI0-0nNqdD2dFE9Sp2WYoU=',
      'err': 0,
      'opcode_set_sha256': 'aa793385483e5494c3498a456c5c4e41a42313b76a822dce0b2f0c843126c782',
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12uP1k_KHzFvzvQ19eaRTwU-BlYT2xstPmBWNhgeF55ig=',
      'err': 0,
      'opcode_set_sha256': '2c8b8a91fd23cd18654d083193e05c62854d41c6190d2b6d904755973827e5ac',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[use_beta_false]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HHS_H_UserArgs_MT64x64x16_MI16x16qCcRb_sT5GcznsviP1qYnbh6tb0oYKYjYInSFoh0gPs=',
      'err': 0,
      'opcode_set_sha256': 'a4b54aece54c67e8881e6f3cf612a59bb9002e0215dc681fe0284dabbfdc8a46',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[xfp32_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_MX_B_Bias_SB_HA_S_SAB_SAV_UserAJk8m7lfCoDt-sihEfvURi09njxAtcH5u7Pr8xMfzO7Y=',
      'err': 0,
      'opcode_set_sha256': 'e9f798790c24048e8dc7d2cbdd2b93e62d821b961d1b6165ae7d42ea7f742456',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_MX_B_Bias_SB_HA_S_SAB_SAV_UserAidevj6Zew4ToAV1YP-iLXCDF6S33yPGYFmekrE7GNFY=',
      'err': 0,
      'opcode_set_sha256': '27b2e4872c5a8af402144b898853e91e392c8f671eaec35b6dd3372f382bd43a',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_MX_B_Bias_SB_HA_S_SAB_SAV_UserArtdoV0YK4wrvUCX2BXD_cAdxyZr-RmaSnvb1XumFdjE=',
      'err': 0,
      'opcode_set_sha256': '5747de005e55c8ad4e1bf5ee8c5b075615cc796d3eaf21118e6a4ae8364239a6',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[zgemm]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_C_Z_B_UserArgs_MT16x16x4_MI16x16xBhyg_5-LVuf9emuiHFlB-JT0jxCEawPzuAbOeyt01eE=',
      'err': 0,
      'opcode_set_sha256': 'ca00b264dba68ea4eeb85ae36d52198618e25743937c8bb9cb27e7ec6ee097c9',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_C_Z_B_UserArgs_MT16x16x4_MI16x16xQhohg30NlnV_7DO--R-oaI6mgjkbdLMWRdt9uKhRH2s=',
      'err': 0,
      'opcode_set_sha256': '151f0db74230bb6ab157878ada82837acb96b86ffe4e4be7c9cac7dd594ddc65',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_C_Z_B_UserArgs_MT16x16x4_MI16x16xyeGXQIS1bZzC3VgjM1XBP59z1eVndGYGB-cJ7C6AwkI=',
      'err': 0,
      'opcode_set_sha256': 'ca00b264dba68ea4eeb85ae36d52198618e25743937c8bb9cb27e7ec6ee097c9',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_C_Z_B_UserArgs_MT16x16x4_MI16x16xys1hahBk7d9AlQqn-5OcZjmc4msMQkZaJECmQFgH20o=',
      'err': 0,
      'opcode_set_sha256': '151f0db74230bb6ab157878ada82837acb96b86ffe4e4be7c9cac7dd594ddc65',
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[zgemm_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT16x32x8_SN_LDSB0_AoOkgc-UY1T0X6ULvdt4n9l2lnEqNQ4730-U0fw5yiNA=',
      'err': 0,
      'opcode_set_sha256': 'f1da66d693a46c9a2d9265f0c29e5ef4291cec38fc35b81c911481a6df44f11a',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT16x8x8_SN_LDSB0_AFTmaKagzDlkl6slFHc0VVnJ1hfGNZQDdPMRNbEM1OW-M=',
      'err': 0,
      'opcode_set_sha256': '65ecca57a482492580e3c73d0453c6be81587158a01d550bcfc698d47204a333',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT32x16x8_SN_LDSB0_A1zQRNBbz4Xht1EA_KrV_QLovzktvYidfvWD9sYi1bp8=',
      'err': 0,
      'opcode_set_sha256': 'f1da66d693a46c9a2d9265f0c29e5ef4291cec38fc35b81c911481a6df44f11a',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT4x8x16_SN_LDSB0_AFEfVj-BWBnhpGKGA4xy9a2t_g6YBhKwbTk4L2ZPlRQ1A=',
      'err': 0,
      'opcode_set_sha256': '5b445772cc64f056b4759e463baf1212b3337a3fc80b21e0097d83117dd6d3d0',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT4x8x8_SN_LDSB0_AFCJcg0HusdV8L_GtNuOt6TNZAmDjjEFm8NebvzcF7oYZE=',
      'err': 0,
      'opcode_set_sha256': '5b445772cc64f056b4759e463baf1212b3337a3fc80b21e0097d83117dd6d3d0',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT8x16x8_SN_LDSB0_AFojel_NA_EfBMjiVywWCGLzb_2WGbmqIh9H1xdMQSUWE=',
      'err': 0,
      'opcode_set_sha256': '65ecca57a482492580e3c73d0453c6be81587158a01d550bcfc698d47204a333',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT8x4x16_SN_LDSB0_AFRieewFmoFlTUtIsiVb8jzxAzBddGRoA6POdHcjq670s=',
      'err': 0,
      'opcode_set_sha256': '5b445772cc64f056b4759e463baf1212b3337a3fc80b21e0097d83117dd6d3d0',
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT8x4x8_SN_LDSB0_AFCemAghMo3CYJVcwc4L_FG6FJ79hmAFkcanREcP5SjBC0=',
      'err': 0,
      'opcode_set_sha256': '5b445772cc64f056b4759e463baf1212b3337a3fc80b21e0097d83117dd6d3d0',
    }),
  ])
# ---
